feat: добавлена мультивалюта
